Tray now scales correctly on mobile

--- a/src/Components/Map/Map.module.scss
+++ b/src/Components/Map/Map.module.scss
@@ -5,7 +5,7 @@ $offset-top: $size-lg;
 
 .map {
   width: 100%;
-  height: 100%;
+  height: 80vh;
   background-color: #eee;
   border: 2px solid #ddd;
   top: $offset-top;
